[project]
name = "bundesliga"
version = "0.1.0"
description = ""
authors = [
    {name = "Bjarki Olsen",email = "bjarki.kass.olsen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.38.1,<2.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
